@@ -10,12 +10,16 @@
     <version>1.0</version>
 
     <properties>
-        <gwtVersion>2.8.0</gwtVersion>
         <hibernate-version>5.0.1.Final</hibernate-version>
-        <!--<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>-->
-    </properties>
 
-    <dependencyManagement>
+        <gwtVersion>2.8.0</gwtVersion>
+        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <tomcat.webport>8082</tomcat.webport>
+        <tomcat.ajpport>8182</tomcat.ajpport>
+        <tomcat.context>/parent</tomcat.context>
+    </properties>
+<!--    <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>com.google.gwt</groupId>
@@ -25,38 +29,35 @@
                 <type>pom</type>
             </dependency>
         </dependencies>
-    </dependencyManagement>
+    </dependencyManagement>-->
 
     <dependencies>
-
-        <!--GWT-->
-        <!-- <dependency>
-             <groupId>com.google.gwt</groupId>
-             <artifactId>gwt-user</artifactId>
-             <scope>provided</scope>
-         </dependency>-->
-        <!-- <dependency>
-             <groupId>com.google.gwt</groupId>
-             <artifactId>gwt-dev</artifactId>
-             <scope>provided</scope>
-         </dependency>
-         <dependency>
-             <groupId>org.codehaus.mojo</groupId>
-             <artifactId>gwt-maven-plugin</artifactId>
-             <version>2.6.0</version>
-         </dependency>-->
-        <!--<dependency>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>gwt-maven-plugin</artifactId>
-            <version>2.4.0</version>
-        </dependency>
--->
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-servlet</artifactId>
             <version>${gwtVersion}</version>
-            <scope>compile</scope>
+            <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-user</artifactId>
+            <version>${gwtVersion}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.0.GA</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.0.GA</version>
+            <classifier>sources</classifier>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
@@ -83,36 +84,73 @@
         </dependency>
     </dependencies>
     <build>
+        <defaultGoal>clean install  tomcat7:run-war-only</defaultGoal>
+        <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
+
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>gwt-maven-plugin</artifactId>
+                <version>${gwtVersion}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <!--
+                            <goal>test</goal>
+                            -->
+                        </goals>
+                    </execution>
+                </executions>
+                <!-- Plugin configuration. There are many available options, see
+                          gwt-maven-plugin documentation at codehaus.org -->
+                <configuration>
+                    <runTarget>GwtApp.html</runTarget>
+                    <draftCompile>true</draftCompile>
+                    <hostedWebapp>${webappDirectory}</hostedWebapp>
+                    <noServer>true</noServer>
+                    <port>${tomcat.webport}</port>
+                    <runTarget>${tomcat.context}</runTarget>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>exploded</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <webappDirectory>${webappDirectory}</webappDirectory>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>2.5.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            <!-- <plugin>
-                 <groupId>org.codehaus.mojo</groupId>
-                 <artifactId>gwt-maven-plugin</artifactId>
-                 <version>2.4.0</version>
-                 <executions>
-                     <execution>
-                         <goals>
-                             <goal>compile</goal>
-                             <goal>test</goal>
-                         </goals>
-                     </execution>
-                 </executions>
-
-                 &lt;!&ndash; Plugin configuration. There are many available options, see gwt-maven-plugin
-                     documentation at codehaus.org &ndash;&gt;
-                 <configuration>
-                     <runTarget>GwtApp.html</runTarget>
-                     <hostedWebapp>${webappDirectory}</hostedWebapp>
-                 </configuration>
-             </plugin>-->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.0</version>
+                <configuration>
+                    <path>${tomcat.context}</path>
+                    <port>${tomcat.webport}</port>
+                    <ajpPort>${tomcat.ajpport}</ajpPort>
+                    <systemProperties>
+                        <JAVA_OPTS>-XX:MaxPermSize=256m</JAVA_OPTS>
+                    </systemProperties>
+                </configuration>
+            </plugin>
 
         </plugins>
     </build>
